Fix product images on firefox small screens
Remove flexbox, was useless.

--- a/content/themes/elements/css/app.css
+++ b/content/themes/elements/css/app.css
@@ -2887,19 +2887,6 @@ body.single-product .product {
   padding-top: 90px;
   background-color: #f0f0f0; }
   body.single-product .product .images {
-    display: -webkit-box;
-    display: -webkit-flex;
-    display: -moz-flex;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-pack: center;
-    -ms-flex-pack: center;
-    -webkit-justify-content: center;
-    -moz-justify-content: center;
-    justify-content: center;
-    -webkit-align-items: center;
-    -ms-flex-align: center;
-    align-items: center;
     width: 60%;
     height: 100%;
     float: right;
