--- a/content/themes/elements/sass/store/_product.scss
+++ b/content/themes/elements/sass/store/_product.scss
@@ -8,10 +8,6 @@ body.single-product{
     background-color: $grey-light;
 
     .images{
-      @include flexbox;
-      @include justify-content( center );
-      @include align-items( center );
-
       width: 60%;
       height: 100%;
       float: right;
